--- a/styles/main.css
+++ b/styles/main.css
@@ -11,10 +11,16 @@
   height: 2rem;
 }
 
+.tabCounter {
+  width: 2rem;
+  float: right;
+}
+
 .counter {
   width: 2rem;
   float: right;
 }
+
 i {
   height: 10px;
   width: 5rem;
@@ -26,7 +32,10 @@ i {
     width: 25px;
 }
 
-
+.hidden {
+  height:0;
+  color: transparent
+}
 
 li {
     width: 99.4%;
